# ema

./: .env.example  .gitignore  CLAUDE.md  DATA-MIGRATION-LOG.md  README.md  TAURI-AUTO-START-FIX.md  WIKI-MCP.md  biome.json  erl_crash.dump  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.superman/: context.md  project.md
IGNORE_OLD_TAURI_BUILD/: .gitignore  README.md
agent-runtime/: package-lock.json  package.json  tsconfig.json
app/: FRONTEND-FIXES.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
blueprint/: README.md  desktop-launch.sh  launch.sh  server.js  vapp.js
cli/: README.md  package-lock.json  package.json  tsconfig.json
daemon/: .gitignore  README.md  mix.exs
docs/: API_CONTRACTS.md  APP-READINESS-MATRIX.md  ARCHITECTURE-LOCKED-2026-04-05.md  ARCHITECTURE.md  AUDIT-RESULTS.md  AUTHORITY_ACCESS_AND_CONTEXT_SECURITY_SPEC.md  BABYSITTER_CHANNELS.md  BACKFEED-LANDING-ZONE.md  BLUEPRINT.md  BUILD_PLAN.md  BUILD_PLAN_SYSTEMS.md  BUILD_RESULT.md  BUILD_RESULT_SYSTEMS.md  CLAUDE-CODEX-ENGINE-LAUNCH.md  CLAUDE-ENGINE-SYSTEM-PROMPT.md  CLI.md  CODEX-ENGINE-SYSTEM-PROMPT.md  CONTEXT_ASSEMBLER_SYSTEM_SPEC.md  CONTRADICTIONS-AUDIT-2026-04-04.md  CONVERGENCE-READINESS-REPORT.md  DATA_MODELS.md  DEPLOYMENT.md  DEV_GUIDE.md  DEV_SETUP.md  EMA-CLI-COMPATIBILITY-MATRIX.md  EMA-CLI-REFERENCE.md  FEATURES.md  (+40 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  origin_check.rs  protocol.rs  window_mgr.rs  ws_server.rs
(+2840 files in other folders)
